# signal

./: .env.example  .gitignore  IMPLEMENTATION_STATUS.md  IMPLEMENTATION_SUMMARY.md  LICENSE  MULTI_GPU_IMPLEMENTATION.md  QUICKSTART.md  README.md  SIGNAL_API_FLOW_DOCUMENTATION.md  SIGNAL_API_FLOW_VISUALIZATION.md  SIMPLIFICATION.md  codebase_visualization.md  deploy_modal.py  deploy_multi_gpu.sh  dev_server.sh  file-reading.md  main.py  multi_gpu_test_output.txt  nixpacks.toml  pyproject.toml  requirements-api.txt  requirements.txt  start.sh  test_finetune.py
.github/: CODEOWNERS
api/: auth.py  datadog_client.py  frontier_client.py  future_store.py  gpu_allocator.py  logging_config.py  models.py  openai_compat.py  pricing.py  registry.py  request_orchestrator.py  schemas.py  supabase_client.py  token_counter.py
client/: .gitignore  HYBRID_CLIENT_GUIDE.md  MANIFEST.in  PUBLISHING.md  README.md  pyproject.toml  test_sdk_quick.py
client/examples/: advanced_inference.py  advanced_training.py  basic_async.py  basic_sync.py  futures_pipelining.py  ppo_with_gae.py
client/frontier_signal/: __init__.py  async_client.py  async_inference_client.py  async_training_client.py  client.py  exceptions.py  inference_client.py  schemas.py  training_client.py
client/rewardsignal/: __init__.py  _version.py  async_client.py  async_inference_client.py  async_training_client.py  async_training_client_v2.py  client.py  exceptions.py  futures.py  inference_client.py  migration.py  request_queue.py  schemas.py  training_client.py
client/tests/: test_hybrid_api.py  test_inference_client.py  test_training_client.py
config/: models.yaml  pricing.yaml
docs/: DEPLOYMENT.md  Futures-Architecture.md  MIGRATION_SUMMARY.md  Metrics.md  QUICKREF.md  R2-SETUP.md  README.md  RL-Algorithms.md  Reference-Models.md  Tinker-Advanced-Features.md  Tinker.md  deployment-guide.md  modal_gpu_allocation.md
examples/: dpo_example.py  sft_example.py  simple_example.py
modal_runtime/: __init__.py  __main__.py  app.py  axolotl_config_generator.py  cleanup.py  errors.py  gpu_monitor.py  gpu_utils.py  loss_functions.py  manifest.py  metrics.py  model_loader.py  multi_gpu_session.py  policy_evaluation.py  primitives.py  primitives.py.bak  reference_model_cache.py  reference_model_service.py  s3_client.py  trainer_utils.py  training_session.py  trl_trainers.py  vllm_inference.py
scripts/: check_supabase.py  create_profile.py  create_test_setup.py  manage_keys.py  quickstart.sh
tests/: README.md  __init__.py  conftest.py  test_api.py  test_api_e2e.py  test_async_futures.py  test_auth.py  test_client.py  test_deployment_endpoints.py  test_dpo.py  test_e2e_simple.py  test_gpu_allocator.py  test_gpu_monitoring.py  test_grpo.py  test_grpo_ppo.py  test_integration.py  (+8 more)
(+11 files in other folders)
