[project]
name = "signal"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "bcrypt>=5.0.0",
    "boto3>=1.40.56",
    "fastapi>=0.119.1",
    "modal>=1.2.0",
    "passlib>=1.7.4",
    "python-dotenv>=1.1.1",
    "python-jose>=3.5.0",
    "python-multipart>=0.0.20",
    "pyyaml>=6.0.3",
    "rewardsignal",
    "slowapi>=0.1.9",
    "supabase>=2.22.1",
    "uvicorn>=0.38.0",
]

[dependency-groups]
dev = [
    "ruff>=0.14.1",
]

[tool.uv.sources]
rewardsignal = { path = "client", editable = true }
